certificate/ingress.nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  rules:
  - host: <YOUR_IP>.nip.io
    http:
      paths:
      - backend:
          service:
            name: nginx
            port: 
              number: 80
        path: /
        pathType: Prefix
  #Descomenta esto despues que este aplicado el certificado      
  # tls:
  # - hosts:
  #   - <YOUR_IP>.nip.io
  #   secretName: ssl-cert-production
